--- a/src/main/webapp/resources/css/resume_css/footer.css
+++ b/src/main/webapp/resources/css/resume_css/footer.css
@@ -1,13 +1,14 @@
-.footer{
-    position: absolute;
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #D9D9D9;
-    margin-top: 1100px;
-    margin-left: -4px;
-    width: 1004px;
     height: 50px;
+    width: 100%;
 }
-.footer p{
+.footer p {
     color: #717171;
     padding: 15px;
     font-size: 13px;
+    text-align: center;
 }
