--- a/src/main/webapp/resources/css/login_style/loginstyle.css
+++ b/src/main/webapp/resources/css/login_style/loginstyle.css
@@ -46,19 +46,37 @@
     h1 {text-align: center; margin-bottom: 20px;
     }
 
-    .form-group {
-        display: flex;
-        align-items: left; 
-        margin-bottom: 20px;
-    }
+	.form-group {
+	    display: flex;
+	    align-items: flex-start; 
+	    margin-bottom: 25px;
+	    position: relative;
+	}
 
     label { display: block; font-weight: bold; margin-bottom: 5px;
     }
 
     input[type="text"],
     input[type="password"] { width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box;
-    } #birth{ width: 75%; padding: 10px; margin-left: -1px; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box;
-    }
+    } 
+	/* 개인(구직자)-생년월일 스타일 */
+	#individualBirthd {
+	    width: 70%;
+	    padding: 10px;
+	    margin-left: -1px;
+	    border: 1px solid #ccc;
+	    border-radius: 4px;
+	    box-sizing: border-box;
+	}
+    /* 기업-생년월일 스타일 */
+	#enterpriseBirthd {
+	    width: 70%;
+	    padding: 10px;
+	    margin-left: -1px;
+	    border: 1px solid #ccc;
+	    border-radius: 4px;
+	    box-sizing: border-box;
+	}
 
     .contactPerson {
     margin: 20px auto;
@@ -77,7 +95,7 @@
         box-sizing: border-box;
         display: inline-block;
         cursor: pointer;
-        padding: 10px;
+        padding: 13px;
         border: 1px solid #ccc;
         text-align: center;
         font-size: 12px;
@@ -104,7 +122,7 @@
         align-items: center;
     }
     .cpinfo h4 {
-        margin: 0; /* 기본 여백 제거 */
+        margin: 0; 
     }
     .head-guide {
         float: right; 
@@ -162,4 +180,29 @@
     width: 20px;
     height: 20px;
     background-color: #888;
-}
+	}
+	/* 회원가입 입력값 검증 - 에러메시지 스타일 */
+    .error-message {
+        color: black;
+        font-size: 11px;
+        padding: 2px;
+        border: 1px solid #ffe6e6;
+        border-radius: 3px;
+        background-color: #ffe6e6;
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        white-space: nowrap;
+    }
+
+    .error-message::after {
+        content: '';
+        position: absolute;
+        top: -7px;
+        left: 10px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: transparent transparent #0057ff transparent;
+    }
+	
